# resumix

./: .env.example  .gitignore  Dockerfile  README.md  config.py  config.yaml  main.py  pyproject.toml  req.txt  requirements.txt
components/: compare_module.py  polish_module.py  score_module.py
components/cards/: section_render.py
parser/: jd_parser.py  resume_parser.py  resume_rewriter.py
prompt/: prompt_dispatcher.py
resumix/: .gitignore  config.py  config.yaml  debug.py  generate_test_resume.py  main.py
resumix/components/: agent_module.py  analysis_module.py  base_page.py  compare_module.py  polish_module.py  score_module.py  score_page.py
resumix/config/: config.py  config.yaml  llm_config.py
resumix/job_parser/: jd_parser.py  resume_rewriter.py
resumix/parser/: jd_parser.py  resume_parser.py
resumix/prompt/: prompt_dispatcher.py  prompt_templates.py  score_prompt_templates.py
resumix/rewriter/: keyword_controller.py  keyword_extractor.py
resumix/section/: education_section.py  experience_section.py  info_section.py  projects_section.py  skills_section.py
resumix/section_parser/: base_parser.py  jd_section_labels.py  jd_vector_parser.py  section_labels.py  tech_keywords.json  test_parser.py  vector_parser.py
resumix/tool/: agent.py  tool.py
resumix/utils/: async_utils.py  json_parser.py  keywords_loader.py  llm_client.py  ner.py  ocr_utils.py  session_utils.py  (+2 more)
section/: __init__.py  info_section.py  project_section.py  resume_section.py  section_base.py
tool/: tool.py
utils/: i18n.py  llm_client.py  ocr_utils.py  session_utils.py
(+14 files in other folders)
