[project]
name = "resumix"
version = "0.1.0"
description = "AI Resume Helper"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9.13,<4.0"
dependencies = [
    "streamlit (>=1.45.1,<2.0.0)",
    "paddleocr (>=3.0.1,<4.0.0)",
    "streamlit-option-menu (>=0.4.0,<0.5.0)",
    "streamlit-card (>=1.0.2,<2.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "chardet (>=5.2.0,<6.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "bs4 (>=0.0.2,<0.0.3)",
    "matplotlib (>=3.5.0,<3.6.0)",
    "pymupdf (>=1.26.0,<2.0.0)",
    "paddlepaddle (>=3.0.0,<4.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "reportlab (>=4.4.1,<5.0.0)",
    "keybert (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
